--- a/package.json
+++ b/package.json
@@ -4,14 +4,17 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "node src/db/db.js",
-    "dev": "nodemon src/db/db.js",
+    "start": "node src/index.js",
+    "dev": "nodemon src/index.js",
     "test": ""
   },
   "author": "Adebayo Anjola",
   "license": "ISC",
   "dependencies": {
+    "bcryptjs": "^2.4.3",
+    "dotenv": "^8.2.0",
     "express": "^4.17.1",
+    "jsonwebtoken": "^8.5.1",
     "mongodb": "^3.5.7",
     "mongoose": "^5.9.15",
     "validator": "^13.0.0"
