--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
   "author": "Adebayo Anjola",
   "license": "ISC",
   "dependencies": {
+    "@sendgrid/mail": "^7.2.1",
+    "amqplib": "^0.5.6",
     "bcryptjs": "^2.4.3",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
@@ -20,5 +22,9 @@
     "multer": "^1.4.2",
     "sharp": "^0.25.4",
     "validator": "^13.0.0"
+  },
+  "devDependencies": {
+    "jest": "^26.1.0",
+    "supertest": "^4.0.2"
   }
 }
